[gd_scene load_steps=14 format=3 uid="uid://c8t17ycwbxlb1"]

[ext_resource type="Script" uid="uid://nacdpxryjj5j" path="res://scenes/ui_elements/hud.gd" id="1_3lxr0"]
[ext_resource type="FontFile" uid="uid://co87kw26h5rcj" path="res://assets/fonts/gameboy_font.ttf" id="1_iinru"]
[ext_resource type="AudioStream" uid="uid://cuhvwlsrxynko" path="res://assets/audio/sfx/level_up.wav" id="4_l1b8t"]
[ext_resource type="AudioStream" uid="uid://it48m8s5uvmc" path="res://assets/audio/sfx/meteor_warn.wav" id="4_yg7ux"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4t3oc"]
bg_color = Color(0.607843, 0.67451, 0.0588235, 1)
shadow_color = Color(0.188235, 0.384314, 0.188235, 0.592157)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g040i"]
bg_color = Color(0.188235, 0.384314, 0.188235, 1)

[sub_resource type="Animation" id="Animation_ckl1j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MiddleColorRect/TopShadeColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MiddleColorRect/BottomShadeColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 74)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MiddleColorRect/ReadyLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MiddleColorRect:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 74)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MiddleColorRect:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 395)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PowerUpLabel:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -50)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MiddleColorRect:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_s7vdq"]
resource_name = "power_up_notification"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PowerUpLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -50), Vector2(0, 0), Vector2(0, 0), Vector2(0, -50)]
}

[sub_resource type="Animation" id="Animation_stnf0"]
resource_name = "remove_ready_indicator"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MiddleColorRect/TopShadeColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -9), Vector2(1000, -9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MiddleColorRect/BottomShadeColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 74), Vector2(-1000, 74)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MiddleColorRect/ReadyLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MiddleColorRect:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.366667, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(960, 74), Vector2(960, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MiddleColorRect:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.366667, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 395), Vector2(0, 432)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MiddleColorRect:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u8lgu"]
_data = {
&"RESET": SubResource("Animation_ckl1j"),
&"power_up_notification": SubResource("Animation_s7vdq"),
&"remove_ready_indicator": SubResource("Animation_stnf0")
}

[sub_resource type="Animation" id="Animation_bdrnt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BottomColorRect/LevelUpLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomColorRect/LifeHBoxContainer/LifeLabel:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.188235, 0.384314, 0.188235, 1)]
}

[sub_resource type="Animation" id="Animation_1oahi"]
resource_name = "level_up"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BottomColorRect/LevelUpLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomColorRect/LifeHBoxContainer/LifeLabel:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(0.188235, 0.384314, 0.188235, 1), Color(0.607843, 0.67451, 0.0588235, 1), Color(0.188235, 0.384314, 0.188235, 1), Color(0.607843, 0.67451, 0.0588235, 1), Color(0.188235, 0.384314, 0.188235, 1), Color(0.607843, 0.67451, 0.0588235, 1), Color(0.188235, 0.384314, 0.188235, 1), Color(0.607843, 0.67451, 0.0588235, 1), Color(0.188235, 0.384314, 0.188235, 1), Color(0.607843, 0.67451, 0.0588235, 1), Color(0.188235, 0.384314, 0.188235, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2oqnn"]
_data = {
&"RESET": SubResource("Animation_bdrnt"),
&"level_up": SubResource("Animation_1oahi")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_3lxr0")

[node name="WraningSpriteInstances" type="Node2D" parent="."]

[node name="MiddleColorRect" type="ColorRect" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -37.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.8, 0.0588235, 1)

[node name="TopShadeColorRect" type="ColorRect" parent="MiddleColorRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -9.0
grow_horizontal = 2
color = Color(0.607843, 0.67451, 0.0588235, 1)

[node name="BottomShadeColorRect" type="ColorRect" parent="MiddleColorRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.607843, 0.67451, 0.0588235, 1)

[node name="ReadyLabel" type="Label" parent="MiddleColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -14.0
offset_right = 50.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.188235, 0.384314, 0.188235, 1)
theme_override_fonts/font = ExtResource("1_iinru")
theme_override_font_sizes/font_size = 24
text = "Ready!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomColorRect" type="ColorRect" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -65.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.607843, 0.8, 0.0588235, 1)

[node name="TopShadeColorRect" type="ColorRect" parent="BottomColorRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -8.0
grow_horizontal = 2
color = Color(0.607843, 0.67451, 0.0588235, 1)

[node name="LifeHBoxContainer" type="HBoxContainer" parent="BottomColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -20.0
offset_right = 419.0
offset_bottom = 20.0
grow_vertical = 2

[node name="LifeLabel" type="Label" parent="BottomColorRect/LifeHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.188235, 0.384314, 0.188235, 1)
theme_override_fonts/font = ExtResource("1_iinru")
theme_override_font_sizes/font_size = 23
text = "Life:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LifeProgressBar" type="ProgressBar" parent="BottomColorRect/LifeHBoxContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_4t3oc")
theme_override_styles/fill = SubResource("StyleBoxFlat_g040i")
step = 1.0
value = 100.0
show_percentage = false

[node name="ScoreHBoxContainer" type="HBoxContainer" parent="BottomColorRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -20.0
offset_right = -100.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="BottomColorRect/ScoreHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.188235, 0.384314, 0.188235, 1)
theme_override_fonts/font = ExtResource("1_iinru")
theme_override_font_sizes/font_size = 23
text = "Score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreCountLabel" type="Label" parent="BottomColorRect/ScoreHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.188235, 0.384314, 0.188235, 1)
theme_override_colors/font_shadow_color = Color(0.188235, 0.384314, 0.188235, 0.592157)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("1_iinru")
theme_override_font_sizes/font_size = 23
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelUpLabel" type="Label" parent="BottomColorRect"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.0
offset_top = -70.0
offset_right = 72.0
offset_bottom = -40.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.607843, 0.8, 0.0588235, 1)
theme_override_colors/font_shadow_color = Color(0.188235, 0.384314, 0.188235, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("1_iinru")
theme_override_font_sizes/font_size = 36
text = "Level UP!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerUpLabel" type="Label" parent="."]
offset_top = -50.0
offset_right = 130.0
offset_bottom = -24.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.607843, 0.8, 0.0588235, 1)
theme_override_colors/font_outline_color = Color(0.188235, 0.384314, 0.188235, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_iinru")
theme_override_font_sizes/font_size = 20
text = "+HEALTH"
vertical_alignment = 1

[node name="ExitLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_bottom = 26.0
grow_horizontal = 0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.607843, 0.8, 0.0588235, 1)
theme_override_colors/font_outline_color = Color(0.188235, 0.384314, 0.188235, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_iinru")
theme_override_font_sizes/font_size = 16
text = "Double press to abort"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MeteorWarnSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yg7ux")
volume_db = -7.0

[node name="LevelUpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_l1b8t")
volume_db = -8.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u8lgu")
}

[node name="SecondaryAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2oqnn")
}
